--- a/style.css
+++ b/style.css
@@ -78,6 +78,8 @@ section{
     position: absolute;
     background-color: #FFFBEB;   
     padding: 0.5rem 2.5rem;
+    text-shadow:0 0 10px rgba(0,0,0,0.3);
+
     box-shadow: 5px 5px 15px black;
     top:50%;
     left:50%;
